--- a/dclass_application/static/css/class.css
+++ b/dclass_application/static/css/class.css
@@ -71,7 +71,9 @@
 }
 
 .comment_btn a {
-    color: var(--my-blue);
+    /* color: var(--my-blue); */
+    background-color: var(--my-blue);
+    color: white;
     padding: 16px 20px;
     font-size: 14px;
     border-radius: 6px;
@@ -80,6 +82,7 @@
     margin: 0 auto;
     display: block;
     box-sizing: border-box;
+    box-shadow: 0 3px 6px -2px #000a3c33;
 }
 
 .class_footer {
@@ -100,9 +103,12 @@
     border: 1px solid var(--my-blue);
     cursor: pointer;
     background-color: white;
-    color: var(--my-blue);
+    /* color: var(--my-blue); */
+    color: white;
+    background-color: var(--my-blue);
     width: 200px;
     box-sizing: border-box;
+    box-shadow: 0 3px 6px -2px #000a3c33;
 }
 
 .margin_left {
