--- a/dclass_application/static/css/result.css
+++ b/dclass_application/static/css/result.css
@@ -3,6 +3,8 @@
     border-radius: 3px;
     text-align: center;
     cursor: pointer;
+    border: 1px solid var(--my-gray);
+    box-sizing: border-box;
 }
 
 
@@ -38,9 +40,6 @@
     flex-wrap: wrap;
     height: 60px;
     line-height: 60px;
-    /* height: 45px;
-    line-height: 45px; */
-    /* background-color: white; */
 }
 
 .strong_result {
@@ -75,12 +74,10 @@
 }
 
 .pagination_item {
-    /* width: 80%; */
     width: 60px;
     height: 60px;
     line-height: 60px;
     border-radius: 30px;
-    /* border: 1px solid var(--my-blue); */
     box-sizing: border-box;
     margin: 0 auto;
     cursor: pointer;
@@ -114,7 +111,15 @@
 
 .pagination li {
     width: 20%;
-    /* width: 80px; */
     text-align: center;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 767px) {
+    .pagination_top {
+        width: 100%;
+    }
+    .pagination li {
+        width: 20%;
+    }
 }
